--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +9,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="/IMG/11406736_943539125689152_4274258952228571741_o.jpg" alt="profilePicture" width="200px" height="200px" style="border-radius:50%">
+                <img src="/IMG/ProfilePic.jpg" alt="profilePicture" width="200px" height="200px" style="border-radius:50%">
             </td>
             <td>
                 <h1>Jayster Dacanay Dela Cruz</h1>
