--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="/IMG/ProfilePic.jpg" alt="profilePicture" width="200px" height="200px" style="border-radius:50%">
+                <img src="IMG/ProfilePic.jpg" alt="profilePicture" width="200px" height="200px" style="border-radius:50%">
             </td>
             <td>
                 <h1>Jayster Dacanay Dela Cruz</h1>
